# binance-db

./: README.md  config.yaml  csv2duckdb.py  pyproject.toml  requirements.txt
src/: downloader.py  logger_setup.py  main.py  utils.py
test/: README.md  test_download.py  test_resume.py
